Fixed the footer on tablets and mobile devices Fixed the width

--- a/attendance_app/static/attendance_app/css/style.css
+++ b/attendance_app/static/attendance_app/css/style.css
@@ -95,7 +95,8 @@ main {
 
 footer {
     width: 100%;
-    max-height: 100px;
+    min-height: 100px;
+    padding: 1em 1em;
     background-color: #fff;
     border: 2px solid #ffffff10;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;;
@@ -561,9 +562,9 @@ main h2 {
     border-radius: 4px;
 }
 
-@media (max-width: 1080px) {
+@media (max-width: 1280px) {
     aside.close-sidebar {
-        flex: 0.20;
+        flex: 0.15;
         width: 60px;
         padding: 5px;
     }
@@ -630,6 +631,14 @@ main h2 {
     }
 }
 
+@media (max-width: 1080px) {
+    aside.close-sidebar {
+        flex: 0.20;
+        width: 60px;
+        padding: 5px;
+    }
+}
+
 /* Size of the web pages for tablets */
 @media (max-width: 850px) {
     body {
@@ -683,6 +692,9 @@ main h2 {
     }
     aside li:first-child {
         display: none;
+    }
+    footer {
+        margin-bottom: 100px;
     }
     /* .sidebar-button {
         height: 50px;
