--- a/attendance_app/static/attendance_app/css/table.css
+++ b/attendance_app/static/attendance_app/css/table.css
@@ -52,7 +52,7 @@
     background-color: #cfcfcff5;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1280px) {
     .content-table {
         min-width: 70vw;
     }}
